<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".views.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mainLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:padding="15dp"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/greenflag_logo"
            android:src="@drawable/logo_green_flag"
            app:layout_constraintTop_toBottomOf="@+id/mainLogin"/>

        <TextView
            android:id="@+id/mainHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="40dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:text="@string/main_header"
            app:layout_constraintTop_toBottomOf="@id/mainLogo"/>

        <!--<ImageView
            android:id="@+id/mainOption1Icon"
            android:contentDescription="@string/check_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tick"
            app:layout_constraintStart_toStartOf="@id/mainHeader"
            app:layout_constraintTop_toBottomOf="@id/mainHeader"/>-->

        <TextView
            android:id="@+id/mainOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/car_health_update"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:drawableStart="@drawable/tick"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="@id/mainHeader"
            app:layout_constraintTop_toBottomOf="@id/mainHeader"/>

        <TextView
            android:id="@+id/mainOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/request_a_rescue_online"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:drawableStart="@drawable/tick"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="@id/mainHeader"
            app:layout_constraintTop_toBottomOf="@id/mainOption1"/>

        <TextView
            android:id="@+id/mainOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/policy_information"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:drawableStart="@drawable/tick"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="@id/mainHeader"
            app:layout_constraintTop_toBottomOf="@id/mainOption2"/>


        <Button
            android:id="@+id/mainButton"
            android:contentDescription="@null"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/create_an_account"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/gradient_button_background"
            app:layout_constraintTop_toBottomOf="@id/mainOption3"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>