<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/login_header_text"
        android:fontFamily="@font/anonymous_pro"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginGuidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/loginGuidelineRight" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/loginHeader"
        app:layout_constraintStart_toEndOf="@id/loginGuidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/loginGuidelineRight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loginEmail"
        app:layout_constraintStart_toEndOf="@id/loginGuidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/loginGuidelineRight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginAuthError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/loginPassword"
        app:layout_constraintStart_toEndOf="@id/loginGuidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/loginGuidelineRight"
        tools:text="@string/login_auth_error"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="75dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:background="@drawable/gradient_button_background"
        app:layout_constraintTop_toBottomOf="@id/loginAuthError"
        app:layout_constraintStart_toEndOf="@id/loginGuidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/loginGuidelineRight"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>