<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".views.CreateAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/createAccountBackArrow"
            android:contentDescription="@string/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:src="@drawable/ic_chevron_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/createAccountHeader"
            app:layout_constraintBottom_toBottomOf="@id/createAccountHeader"/>

        <TextView
            android:id="@+id/createAccountHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="26sp"
            android:text="@string/create_an_account_header"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/createAccountHeader"/>

        <TextView
            android:id="@+id/createAccountEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/createAccountEmail"
            android:layout_marginTop="70dp"
            android:text="@string/email_address"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/createAccountHeader"
            app:layout_constraintStart_toStartOf="@id/createAccountEmail"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createAccountEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/createAccountEmailLabel"
            app:layout_constraintStart_toEndOf="@id/createAccountGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/createAccountGuidelineRight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingStart="12dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:background="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/FormError"
            android:id="@+id/createAccountEmailError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/form_error_email_already_exists"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/createAccountEmail"
            app:layout_constraintStart_toEndOf="@id/createAccountGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/createAccountGuidelineRight"
            tools:text="@string/form_error_email_already_exists"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/createAccountPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/createAccountEmailError"
            app:layout_constraintStart_toStartOf="@id/createAccountPassword"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createAccountPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:hint="@string/password_criteria_hint"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/createAccountPasswordLabel"
            app:layout_constraintStart_toEndOf="@id/createAccountGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/createAccountGuidelineRight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingStart="12dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:background="@null"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/FormError"
            android:id="@+id/createAccountPasswordError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/createAccountPassword"
            app:layout_constraintStart_toEndOf="@id/createAccountGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/createAccountGuidelineRight"
            tools:text="@string/form_error_password_invalid"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/createAccountPasswordRepeatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/createAccountPasswordRepeat"
            android:layout_marginTop="20dp"
            android:text="@string/repeat_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/createAccountPasswordError"
            app:layout_constraintStart_toStartOf="@id/createAccountPasswordRepeat"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createAccountPasswordRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/createAccountPasswordRepeatLabel"
            app:layout_constraintStart_toEndOf="@id/createAccountGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/createAccountGuidelineRight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingStart="12dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:background="@null"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/FormError"
            android:id="@+id/createAccountPasswordRepeatError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/createAccountPasswordRepeat"
            app:layout_constraintStart_toEndOf="@id/createAccountGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/createAccountGuidelineRight"
            tools:text="@string/form_error_passwords_error"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/createAccountPasswordCriteria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/password_criteria"
            app:layout_constraintTop_toBottomOf="@id/createAccountPasswordRepeatError"
            app:layout_constraintStart_toEndOf="@id/createAccountGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/createAccountGuidelineRight"/>

        <Button
            android:id="@+id/createAccountNextButton"
            android:contentDescription="@null"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_button_background"
            android:text="@string/next"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/createAccountPasswordCriteria"
            app:layout_constraintStart_toEndOf="@id/createAccountGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/createAccountGuidelineRight"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/createAccountGuidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/createAccountGuidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
